--- a/react_intro/react_intro/confettiexplosion/package.json
+++ b/react_intro/react_intro/confettiexplosion/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_intro",
+  "name": "confettiexplosion",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
-    "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
